[gd_scene load_steps=2 format=3 uid="uid://dnlm3hs6lmjeg"]

[ext_resource type="Script" path="res://recruiting/coordinators.gd" id="1_u4bj6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4bj6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 258.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Coordinator Signing"

[node name="OCoord" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 125.0
offset_right = 673.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 40
text = "Offensive Coordinator: "

[node name="OCoordScheme" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 170.0
offset_right = 673.0
offset_bottom = 225.0
theme_override_font_sizes/font_size = 40
text = "Preferred Style: "

[node name="DCoord" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 224.0
offset_right = 673.0
offset_bottom = 279.0
theme_override_font_sizes/font_size = 40
text = "Defensive Coordinator: "

[node name="DCoordScheme" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 269.0
offset_right = 673.0
offset_bottom = 324.0
theme_override_font_sizes/font_size = 40
text = "Preferred Style: "

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 548.0
offset_right = 776.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 40
text = "Sim to Next Season"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 388.0
offset_right = 841.0
offset_bottom = 451.0
theme_override_font_sizes/font_size = 40
text = "Fire Offensive Coordinator"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 467.0
offset_right = 848.0
offset_bottom = 530.0
theme_override_font_sizes/font_size = 40
text = "Fire Defensive Coordinator"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
